@@ -349,6 +349,13 @@ pup6.pe:
   script:
     - 'bundle exec rake beaker:suites[default]'
 
+pup6.pe-amzn2:
+  <<: *pup_6_pe
+  <<: *acceptance_base
+  <<: *with_SIMP_ACCEPTANCE_MATRIX_LEVEL_3
+  script:
+    - 'bundle exec rake beaker:suites[default,amzn2]'
+
 pup6.pe-oel:
   <<: *pup_6_pe
   <<: *acceptance_base
